Bug 342321 - nsIncrementalDownload doesn't create 0-sized file when downloading a 0-sized file.  r+sr=darin